--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cf3f522
-	base = 8dedb5f
+	base = b53b163
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 8dedb5f
