--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cf3f522
-	base = 8cc821c
+	base = 8f4c2b2
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 8cc821c
