--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aa92f20
-	base = 7ade3dc
+	base = 5d72936
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 7ade3dc
