--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aa92f20
-	base = 7699949
+	base = e783ee4
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 7699949
