--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aa92f20
-	base = e73fdd7
+	base = e7526e5
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = e73fdd7
