--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aa92f20
-	base = 6f31a46
+	base = 00d54af
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 6f31a46
