--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aa92f20
-	base = 5bbaaa6
+	base = 108e2b2
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 5bbaaa6
