--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = af0ef60
-	base = a3aa8f2
+	base = 2df5b41
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = a3aa8f2
