--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 76a151f
-	base = b61c8a6
+	base = 4d02c48
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = b61c8a6
