--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.1.4": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "1.1.3": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "1.1.1": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"]}
+{"1.1.5": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "1.1.4": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "1.1.3": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "1.1.1": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"]}
