--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec8ea4b
-	base = 47cc49a
+	base = 51c4a1a
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 47cc49a
