--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec8ea4b
-	base = 834d3cf
+	base = c99ca6e
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 834d3cf
