--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec8ea4b
-	base = 957f010
+	base = 9fa59a5
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 957f010
