--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d451ea9
-	base = 343f9ad
+	base = df3042d
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 343f9ad
