--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8c24f72
-	base = 7aedb97
+	base = fea0f35
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 7aedb97
