--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8c24f72
-	base = 3d8ef5f
+	base = 6c5b7d4
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 3d8ef5f
