--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2adfec1
-	base = 09dffb0
+	base = c7c40b9
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 09dffb0
