--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2adfec1
-	base = b9ab971
+	base = 1852398
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = b9ab971
