--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 89e9785
-	base = 6dead56
+	base = d411f17
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 6dead56
