--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 89e9785
-	base = 0796f80
+	base = 19fff56
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 0796f80
