--- a/.github/workflows/ci-rolling.yaml
+++ b/.github/workflows/ci-rolling.yaml
@@ -13,26 +13,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - docker-image: "ubuntu:22.04"
-            gz-version: "fortress"
-            ros-distro: "rolling"
-            ros-repo-packages: ""
-          - docker-image: "ubuntu:22.04"
-            gz-version: "garden"
-            ros-distro: "rolling"
-            ros-repo-packages: ""
-          - docker-image: "ubuntu:22.04"
-            gz-version: "fortress"
-            ros-distro: "rolling"
-            ros-repo-packages: "-testing"
-          - docker-image: "ubuntu:22.04"
-            gz-version: "garden"
+          - docker-image: "ubuntu:24.04"
             ros-distro: "rolling"
             ros-repo-packages: "-testing"
 
     env:
       DOCKER_IMAGE: ${{ matrix.docker-image }}
-      GZ_VERSION: ${{ matrix.gz-version }}
       ROS_DISTRO: ${{ matrix.ros-distro }}
       ROS_REPO_PACKAGES: ${{ matrix.ros-repo-packages }}
     container:
@@ -48,17 +34,9 @@ jobs:
         apt install -qq -y lsb-release wget curl gnupg2 git
         cd ..
         mkdir -p /home/ros2_ws/src
-        if [ "$ROS_DISTRO" == "rolling" ]; then
-          git clone https://github.com/gazebosim/ros_gz/
-        fi
         cp -r gz_ros2_control /home/ros2_ws/src/
         curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
         echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2$ROS_REPO_PACKAGES/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
-        wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null
-        if [ "$GZ_VERSION" == "garden" ]; then
-          export GZ_DEPS="libgz-sim7-dev libgz-plugin2-dev gz-sim7-cli"
-        fi
 
         apt-get update && apt-get upgrade -q -y
         apt-get update && apt-get install -qq -y \
@@ -66,22 +44,12 @@ jobs:
           python3-colcon-ros \
           python3-colcon-common-extensions \
           python3-rosdep \
-          build-essential \
-          ${GZ_DEPS}
+          build-essential
 
-        if [ "$GZ_VERSION" == "garden" ]; then
-          export ROSDEP_ARGS="--skip-keys ros_gz_sim --skip-keys gz-plugin2 --skip-keys gz-sim7 --skip-keys gz-transport12 --skip-keys gz-math7 --skip-keys gz-msgs9"
-        fi
         cd /home/ros2_ws/src/
-        if [ "$ROS_DISTRO" == "rolling" ]; then
-          git clone https://github.com/gazebosim/ros_gz/
-        fi
-        if [ "$ROS_DISTRO" == "iron" ]; then
-          git clone https://github.com/gazebosim/ros_gz/ -b iron
-        fi
         rosdep init
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro ${ROS_DISTRO} --ignore-src ${ROSDEP_ARGS}
+        rosdep install --from-paths ./ -i -y --rosdistro ${ROS_DISTRO} --ignore-src
     - name: Build project
       id: build
       run: |
