--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gz_ros2_control_demos
-	previous = 
-	base = 029fe8f
+	previous = 029fe8f
+	base = 23832e6
 	trim = 
 	trimbase = 
