--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_ros2_control
-	previous = 
-	base = 1afa092
+	previous = 1afa092
+	base = a128ca3
 	trim = 
 	trimbase = 
