--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gz_ros2_control
-	previous = 
-	base = 94bcee9
+	previous = 94bcee9
+	base = 36749f3
 	trim = 
 	trimbase = 
