--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gz_ros2_control
-	previous = 
-	base = 037fafc
+	previous = 037fafc
+	base = db0cd27
 	trim = 
 	trimbase = 
