--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/gz_ros2_control
-	previous = 
-	base = 2131cc8
+	previous = 2131cc8
+	base = c7a4692
 	trim = 
 	trimbase = 
