--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26c1cab
-	base = 4c1e777
+	base = 967c550
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 4c1e777
