--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control
-	previous = 
-	base = df203c7
+	previous = df203c7
+	base = b5b7846
 	trim = 
 	trimbase = 
