--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_ros2_control
-	previous = 
-	base = 83a186e
+	previous = 83a186e
+	base = b9e9a25
 	trim = 
 	trimbase = 
