--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_ros2_control_tests
-	previous = 
-	base = 2d9c463
+	previous = 2d9c463
+	base = 38b6561
 	trim = 
 	trimbase = 
