--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gz_ros2_control_demos
-	previous = 
-	base = 967c550
+	previous = 967c550
+	base = 180d72d
 	trim = 
 	trimbase = 
