--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/gz_ros2_control_demos
-	previous = 
-	base = 2b151c9
+	previous = 2b151c9
+	base = a40fc6b
 	trim = 
 	trimbase = 
