--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9f9e04e
-	base = 6a684f2
+	base = 8e8957e
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 6a684f2
