--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ba02047
-	base = 3e7cc14
+	base = ec72f4a
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 3e7cc14
