--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3b32bf8
-	base = b60a59a
+	base = 8790121
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = b60a59a
