--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gz_ros2_control_demos
-	previous = 
-	base = 468b97c
+	previous = 468b97c
+	base = 57e20ed
 	trim = 
 	trimbase = 
