--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6b52ead
-	base = aa68725
+	base = 3f3d395
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = aa68725
