--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6b52ead
-	base = 3e67538
+	base = 2dcaca6
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 3e67538
