--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.7.13": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"]}
+{"0.7.14": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"], "0.7.13": ["Alejandro Hern\u00e1ndez", "alejandro@openrobotics.org"]}
