--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2514fe
-	base = 76d007e
+	base = 3c33b83
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 76d007e
