--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea50d3c
-	base = d8e6d57
+	base = ae58960
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = d8e6d57
