--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea50d3c
-	base = 37322d6
+	base = ac27e68
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = 37322d6
