--- a/config/ackermann_drive_controller.yaml
+++ b/config/ackermann_drive_controller.yaml
@@ -18,8 +18,8 @@ ackermann_steering_controller:
     rear_wheels_radius: 0.3
     front_steering: true
     reference_timeout: 2.0
-    rear_wheels_names: ['rear_left_wheel_joint', 'rear_right_wheel_joint']
-    front_wheels_names: ['left_wheel_steering_joint', 'right_wheel_steering_joint']
+    rear_wheels_names: ['rear_right_wheel_joint', 'rear_left_wheel_joint']
+    front_wheels_names: ['right_wheel_steering_joint', 'left_wheel_steering_joint']
     use_stamped_vel: true
     open_loop: false
     velocity_rolling_window_size: 10
