--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>gz_ros2_control</name>
-  <version>2.0.7</version>
+  <version>2.0.9</version>
   <description>Gazebo ros2_control package allows to control simulated robots using ros2_control framework.</description>
   <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
@@ -18,8 +18,10 @@
   <depend>rclcpp</depend>
   <depend>yaml_cpp_vendor</depend>
   <depend>rclcpp_lifecycle</depend>
-  <depend>hardware_interface</depend>
+
   <depend>controller_manager</depend>
+  <depend>hardware_interface</depend>
+  <depend>ros2_control_cmake</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
