--- a/.github/workflows/ci-rolling.yaml
+++ b/.github/workflows/ci-rolling.yaml
@@ -8,7 +8,7 @@ on:
     branches: [ rolling ]
   schedule:
     # Run every morning to detect flakiness and broken dependencies
-    - cron: '03 5 * * *'
+    - cron: '03 5 * * MON-FRI'
 
 jobs:
   build:
