--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>gz_ros2_control_demos</name>
-  <version>2.0.8</version>
+  <version>3.0.0</version>
   <description>gz_ros2_control_demos</description>
 
   <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>
@@ -35,6 +35,7 @@
   <exec_depend>xacro</exec_depend>
 
   <!-- ros2_control -->
+  <depend>ros2_control_cmake</depend>
   <exec_depend>ackermann_steering_controller</exec_depend>
   <exec_depend>control_msgs</exec_depend>
   <exec_depend>diff_drive_controller</exec_depend>
@@ -46,7 +47,7 @@
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>mecanum_drive_controller</exec_depend>
   <exec_depend>ros2controlcli</exec_depend>
-  <exec_depend>tricycle_controller</exec_depend>
+  <exec_depend>tricycle_steering_controller</exec_depend>
   <exec_depend>velocity_controllers</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
