--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9aafb9
-	base = 50137bf
+	base = 6bf3d9b
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 50137bf
